@@ -24,4 +24,7 @@ dnl  Simply override the definition in x86_64-defs.m4.
 
 define(`CALL',`call	GSYM_PREFIX`'$1')
 
+
+define(`JUMPTABSECT', `DATA')
+
 divert`'dnl
