@@ -146,4 +146,6 @@ ifdef(`PIC',
   `define(`CALL',`call	GSYM_PREFIX`'$1')')
 
 
+define(`JUMPTABSECT', `.section	.data.rel.ro.local,"aw",@progbits')
+
 divert`'dnl
